--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "eleventy-shortcode-keystone-document",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": ".eleventy.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@keystone-6/document-renderer": "^1.0.0",
+    "eleventy-shortcode-keystone-document": "github:larryhudson/eleventy-shortcode-keystone-document",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   }
